--- a/views/search.html
+++ b/views/search.html
@@ -37,6 +37,7 @@
             <div class="products-list-content" ng-show="productsLine1.length">
                 <products-list-items products="currentProductsPage1" products-line=" productsLine1" show-product="showProduct(product)" selected-items="productsToCompare" is-search-page="true" max-selection="{{maxSelection}}" is-checked-to-compare="isCheckedToCompare(product)"></products-list-items>
                 <products-list-items products="currentProductsPage2" products-line=" productsLine2" show-product="showProduct(product)" selected-items="productsToCompare" is-search-page="true" max-selection="{{maxSelection}}" is-checked-to-compare="isCheckedToCompare(product)"></products-list-items>
+                <div class="hider"></div>
             </div>
         </div>
         <div class="search-indicators">
