--- a/views/comparison.html
+++ b/views/comparison.html
@@ -5,8 +5,8 @@
     </h2>
 
     <div class="back-button"><button type="button" class="btn btn-default" ng-click="goBack()">חזור</button></div>
-
-    <div class="loading" ng-show="loading"></div>
+    
+    <ws-loading ng-show="loading"></ws-loading>
 
     <div class="table-background">
         <div class="table-container" ng-hide="loading">
