--- a/views/home.html
+++ b/views/home.html
@@ -1,40 +1,41 @@
 ﻿<div class="home-page">
-    <div class="loading" ng-show="loading"></div>
+    <ws-loading ng-show="loading"></ws-loading>
     <div class="fatal-error" ng-show="!isOnline || fatalError" s-online>
         <div class="alert alert-danger" ng-show="fatalError">לא ניתן להתחבר לשרת, אירעה שגיאה בלתי צפויה. נא להפעיל את האפליקציה מחדש.</div>
         <div class="alert alert-warning" ng-hide="isOnline">האפליקציה דורשת חיבור רשת פעיל. יש להתחבר לרשת ולנסות שוב.</div>
-        <br/>
+        <br />
         <a href="#" ng-click="reload()">נסה שנית</a>
     </div>
     <div class="promotions" ng-hide="!isOnline || fatalError" s-online>
         <div class="promotions-container"
-             ng-swipe-left="back()" ng-swipe-right="next()"
-             ng-click="openPromotion(selectedPromotion.link.url)">
+             ng-swipe-left="next()" ng-swipe-right="back()">
             <div class="main-promotion">
-                <!--  <div>
-                <ul class="nav nav-tabs">
+                <div>
+                    <ul class="nav nav-tabs">
 
-                    <li ng-repeat="promotion in main_promotions" ng-class="{'active': isSelected(promotion)}" ng-click="select(promotion)">
-                        <a ng-href="#Promotion_{{promotion.id}}" data-toggle="tab">{{promotion.title.text}}</a>
-                        <div class="promotion-arrow" ng-show="isSelected(promotion)"><i class="fa fa-caret-up"></i></div>
-                    </li>
+                        <li ng-repeat="promotion in main_promotions"
+                            ng-class="{'active': isSelected(promotion)}" ng-click="select(promotion)">
+                            <a ng-href="#Promotion_{{promotion.id}}"
+                               data-toggle="tab">{{promotion.title.text}}</a>
+                            <div class="promotion-arrow" ng-show="isSelected(promotion)"><i class="fa fa-caret-up"></i></div>
+                        </li>
 
-                </ul>
+                    </ul>
 
-                <div class="tab-content">
-                also removed 'tab-pane'
-                -->
-                <div class="promotion"
-                     id="Promotion_{{promotion.id}}"
-                     ng-class="{'active': isSelected(promotion)}"
-                     ng-show="isSelected(promotion)"
-                     ng-repeat="promotion in main_promotions">
-                    <img ng-src="{{promotion.image.url}}" alt="{{promotion.title.text}}" />
+                    <div class="tab-content">
+                        <div class="tab-pane"
+                             ng-repeat="promotion in main_promotions"
+                             ng-class="{'active': isSelected(promotion)}" 
+                             id="Promotion_{{promotion.id}}"
+                             ng-show="isSelected(promotion)">
+                            <div class="promotion"
+                                 ng-click="openPromotion(promotion.link.url)">
+                                <img ng-src="{{promotion.image.url}}" alt="{{promotion.title.text}}" />
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
-
-                <!--</div>
-
-                </div>-->
             </div>
         </div>
 
@@ -47,7 +48,7 @@
 
     <div class="products-list-container" ng-repeat="category in promotionsCategories">
         <products-list category="category" show-product="showProduct(product)"></products-list>
-        
+
     </div>
 
 </div>
