--- a/views/search.html
+++ b/views/search.html
@@ -1,7 +1,7 @@
 ﻿<div class="search-page">
 
     <div class="back-button"><button type="button" class="btn btn-default" ng-click="goBack()">חזור</button></div>
-
+    
     <div ng-hide="fatalError || !isOnline">
         <div ng-switch on="!!searchTerm">
             <div class="search-term" ng-switch-when="true">
@@ -25,32 +25,30 @@
                 </ul>
             </div>
         </div>
-
+        <ws-loading ng-show="loading" ></ws-loading>
         <div class="products-list-container clear"
              n-g-swipe-right="navigateNext()"
              n-g-swipe-left="navigateBack()"
+             ng-hide="loading"
              ng-class="{ 'next-animation' : movedToNext, 'previous-animation' : movedToPrevious}">
-            <div class="loading" ng-show="loading"></div>
-            <div ng-hide="loading"></div>
-
-            <div class="no-products" ng-show="!loading && !currentProductsPage1.length"><b>לא קיימים מוצרים בקטגוריה</b></div>
+            <div class="no-products" ng-show="!loading && !currentProductsPage1.length">לא קיימים מוצרים בקטגוריה</div>
             <div class="products-list-content" ng-show="productsLine1.length">
                 <div class="products-list-stable">
                     <div class="hider reverse" ng-show="isScrollingRight"></div>
-                    <products-list-items products="currentProductsPage1" products-line=" productsLine1" show-product="showProduct(product)" selected-items="productsToCompare" is-search-page="true" max-selection="{{maxSelection}}" is-checked-to-compare="isCheckedToCompare(product)"></products-list-items>
-                    <products-list-items products="currentProductsPage2" products-line=" productsLine2" show-product="showProduct(product)" selected-items="productsToCompare" is-search-page="true" max-selection="{{maxSelection}}" is-checked-to-compare="isCheckedToCompare(product)"></products-list-items>
+                    <products-list-items products="currentProductsPage1" products-line=" productsLine1" show-product="showProduct(product)" selected-items="productsToCompare" comparison-enabled="currentCategory.level == 2" is-search-page="true" max-selection="{{maxSelection}}" is-checked-to-compare="isCheckedToCompare(product)"></products-list-items>
+                    <products-list-items products="currentProductsPage2" products-line=" productsLine2" show-product="showProduct(product)" selected-items="productsToCompare" comparison-enabled="currentCategory.level == 2" max-selection="{{maxSelection}}" is-checked-to-compare="isCheckedToCompare(product)"></products-list-items>
                     <div class="hider" ng-show="isScrollingLeft"></div>
                 </div>
             </div>
         </div>
-        <div class="search-indicators">
+        <div class="search-indicators" ng-hide="true">
             <div class="search-left-arrow bottom" ng-show="canNavigateNext()"><i class="fa fa-chevron-left"></i></div>
             <div class="search-right-arrow bottom" ng-show="canNavigateBack()"><i class="fa fa-chevron-right"></i></div>
         </div>
 
         <div class="footer" ng-hide="!loading && !currentProductsPage1.length">
             <div class="products-comparison-wrapper">
-                <div class="comparison-products" ng-show="isAnyProductSelected()">
+                <div class="comparison-products" >
                     <div class="comparison-products-container" ng-repeat="product in productsToCompare">
                         <div class="remove-product" ng-click="publishRemoveProduct(product)">
                             <i class="fa fa-times"></i>
