--- a/app/css/app.css
+++ b/app/css/app.css
@@ -202,8 +202,9 @@ input[type=submit].search-button {
     position: absolute;
     left: 0;
     top: 0;
-    width: 60px;
+    width: 80px;
     height: 100%;
+    text-align: center;
 }
 
 .search-input input[type=text] {
